[project]
name = "python-soundgen"
version = "0.1.0"
description = "Python implementation of soundgen parametric voice synthesis"
authors = [
    {name = "Python soundgen implementation"}
]
readme = "python_soundgen/README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0",
    "soundfile>=0.10.0",
    "sounddevice>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_soundgen"]